# benchopt

./: .azure_pipeline.yml  .coveragerc  .flake8  .gitignore  .mailmap  CHANGE.md  CLAUDE.md  LICENSE  MANIFEST.in  Makefile  README-2.rst  README.md  README.rst  RELEASE.md  codecov.yml  conftest.py  debug_script.py  dev-requirements.txt  elec_consumption.md  environment.yml  main.py  pyproject.toml  roadmap.md  setup.cfg  setup.py  snippets_gen_htlml.py  snippets_gen_html.py  solvers.yml
.circleci/: artifact_path  config.yml
.claude/: settings.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: check_manifest.yml  expose_link.yml  html.yml  linting.yml  main.yml  no_conda_test.yml  release.yml  test.yml
bench_cookiecutter/: objective.py
bench_cookiecutter/datasets/: dataset.py
bench_cookiecutter/solvers/: solver.py
benchmarks/: .gitignore
benchmarks/lasso/: __init__.py  baseline.py  bench_lasso.py  blitz.py  celer.py  cvxpy.py  cyanure.py  datasets.py  lasso_celer.py  lasso_sklearn.py  lightning.py  loss.py  objective.py  sklearn.py
benchmarks/logreg/: __init__.py  bench_logreg.py  celer.py  cvxpy.py  cyanure.py  datasets.py  liblinear.py  lightning.py  logreg_celer.py  logreg_sklearn.py  loss.py  objective.py  sklearn.py
benchmarks/logreg_l1/: objective.py
benchmarks/logreg_l2/: objective.py
benchmarks/mcp/: objective.py
benchmarks/nnls/: objective.py
benchmarks/ols/: objective.py
benchopt/: __init__.py  __main__.py  _generate_runs.py  base.py  base_plots.py  benchmark.py  callback.py  class_property.py  cli.py  config.py  constants.py  dataset_util.py  globals.py  mini.py  plot_kinds.py  profiling.py  runner.py  stopping_criterion.py  sys_info.py  util.py  viz.py
benchopt/cli/: __init__.py  __main__.py  completion.py  helpers.py  main.py  process_results.py  skills.py
benchopt/datasets/: __init__.py  simulated.py
benchopt/helpers/: cv_loops.py  grid_solver.py  julia.py  matlab.py  r_lang.py  requires_gpu.py  run_examples.py  shell.py
benchopt/parallel_backends/: __init__.py  dask_backend.py  slurm_executor.py  torchrun_executor.py
benchopt/plotting/: __init__.py  base.py  base_plots.py  default_plots.py  generate_html.py  generate_matplotlib.py  helpers.py  helpers_compat.py  image_utils.py  plot_bar_chart.py  plot_boxplot.py  plot_boxplot_chart.py  plot_custom.py  plot_from_csv.py  plot_histogram.py  plot_objective_curve.py  short_labels.py
benchopt/results/: __init__.py  files_utils.py  github.py  hugging_face.py  parquet.py  process.py
benchopt/skills/: README.md  __init__.py
benchopt/tests/: __init__.py  conftest.py  fixtures.py  test_benchmark_features.py  test_benchmark_object.py  test_benchmark_outputs.py  test_benchmarks.py  test_cli.py  test_config.py  test_coverage.py  test_cv_loops.py  test_deprecation.py  test_install.py  test_installcmd_solver.py  test_mini.py  test_module.py  test_objective_outputs.py  test_prepare.py  test_run_config_files.py  test_runner.py  test_skills.py  test_solvers.py  test_stopping_criterion.py
benchopt/utils/: __init__.py  checkers.py  class_property.py  colorify.py  conda_env_cmd.py  dependencies_mixin.py  dynamic_modules.py  files.py  github.py  julia.py  julia_helpers.py  misc.py  parametrized_name_mixin.py  parquet.py  pdb_helpers.py  profiling.py  r_helpers.py  run_context.py  run_context_mixin.py  safe_import.py  seed_mixin.py  shell_cmd.py  shell_cmd_preamble.sh  short_labels.py  slurm_executor.py  stream_redirection.py  suppress_std.py  sys_info.py  temp_benchmark.py  terminal_output.py
benchopt/viz/: __init__.py  helpers.py  plot_convergence_curve.py  plot_histogram.py  plot_objective_curve.py  plot_optimality_curve.py  plot_suboptimality_curve.py
continuous_integration/: build_doc.sh  install.cmd  install.sh  posix.yml  test_req_detection.sh  test_script.cmd  test_script.sh  test_script_windows.bat  windows.yml
data_resnet/: benchmark_resnet_classif.html
data_resnet/static/: benchmark.js
doc/: Makefile  TODOs.md  advanced.rst  api.rst  available_benchmarks.rst  benchmark_list.rst  cli.rst  conf.py  config.rst  contrib.rst  convergence_curves.rst  doc-requirements.txt  ex_tuto.rst  faq.rst  get_started.rst  how.rst  index.rst  names.inc  performance_curves.rst  plotting.rst  publish.rst  sg_execution_times.rst  test_config.rst  whats_new.rst
doc/_static/: benchopt.js  style.css
doc/_templates/: layout.html  search.html
doc/benchmark_workflow/: config_benchopt.rst  extend_benchmark.rst  index.rst  install_benchmark.rst  manage_benchmark_results.rst  manage_dependencies.rst  publish_benchmark.rst  run_benchmark.rst  solver_languages.rst  test_benchmark.rst  tests.rst  visualize_benchmark.rst  write_benchmark.rst
doc/build_benchmark/: index.rst  publish_benchmark.rst  run_benchmark.rst  visualize_benchmark.rst  write_benchmark.rst
doc/changes/: _1_0_0.rst  _1_1_0.rst  _1_2_0.rst  _1_3_0.rst  _1_3_1.rst  _1_4_0.rst  _1_5_0.rst  whats_new.rst  whatsnew.rst
doc/sphinxext/: dropdown_tagline.py  gh_substitutions.py  sphinx_click_semantic_group.py
doc/tutorials/: add_custom_plot.rst  add_solver.rst  build_benchmark.rst  index.rst  tuto1.rst  tutorial_understanding_building_benchmark.rst
doc/user_guide/: API_ref.rst  CLI_ref.rst  add_custom_plot.rst  advanced.rst  agent_skills.rst  authoring.rst  benchopt_internals.rst  class_customization.rst  config_benchopt.rst  controlling_randomness.rst  dependencies.rst  distributed_run.rst  index.rst  iterative_solvers.rst  ml_benchmark.rst  performance_curves.rst  reference.rst  running.rst  solver_languages.rst  (+3 more)
examples/: README.txt  plot_run_benchmark.py  plot_run_benchmark_python_R.py  plot_run_benchmark_python_R_julia.py  run_benchopt_prepare.py  run_image_benchmark.py  run_julia_solver.py  run_mini_benchmark.py  run_minimal_benchmark.py  run_plot_config.py  run_r_solver.py
install_scripts/: install_glmnet.sh  install_liblinear.sh
notes/: spec_dataset_prepare_step.md
reproduce_bench/: objective.py
reproduce_bug/: README.md  objective.py  run_config.yml
test_julia/: test_logreg_l2_grad.jl
(+241 files in other folders)
