[build-system]
requires = [
  "setuptools>=42",
  "wheel",
  "setuptools_scm>=6.2"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "benchopt/version.py"
local_scheme = "no-local-version"
fallback_version = "dev"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v -p benchopt.tests.fixtures"
testpaths = [
    "benchopt",
]

[tool.check-manifest]
ignore = [
  "*.yml",
  ".coveragerc",
  ".circleci/*",
  "continuous_integration/*",
  "Makefile",
  "roadmap.md",
  "benchopt/version.py"
]
