[build-system]
requires = [
  "setuptools>=42",
  "wheel",
  "setuptools_scm>=6.2"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "benchopt/version.py"
local_scheme = "no-local-version"
fallback_version = "99.0.dev0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v -p benchopt.tests.fixtures"
testpaths = [
    "benchopt",
]

[tool.check-manifest]
ignore = [
  "*.yml",
  ".circleci/*",
  "continuous_integration/*",
  "Makefile",
  "roadmap.md",
  "benchopt/version.py"
]

[tool.coverage.run]
source = [
    "benchopt"
]
omit = [
  "*/tests/*",
  "setup.py"
]
parallel = true

[tool.coverage.report]
exclude_lines = [
    "if self.debug:",
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "except Exception",
    "\\.\\.\\."
]
ignore_errors = true
show_missing = true
