[build-system]
requires = [
  "setuptools>=42",
  "wheel",
]
build-backend = "setuptools.build_meta"

# Project metadata migrated from setup.cfg (PEP 621)
[project]
name = "benchopt"
description = "Benchmark toolkit for optimization"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = "BSD-3-Clause"
license-files = ["LICENSE"]
maintainers = [
  { name = "Thomas Moreau", email = "thomas.moreau@inria.fr" }
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Topic :: System :: Benchmark",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Environment :: Console",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: R",
  "Programming Language :: Other",
]
# Inferred from classifiers; adjust if different
requires-python = ">=3.9"
dependencies = [
  # CLI deps
  "pyyaml",
  "click>=8.0",
  "pygithub",
  # Runner deps
  "psutil",
  "line-profiler",
  "joblib>=1.4",
  # Results/Plotting deps
  "mako",
  "pyarrow",
  "matplotlib",
  "plotly>=4.12",
  # Scientific computing deps
  "numpy",
  "scipy",
  "pandas",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://benchopt.github.io/"
Source = "https://github.com/benchopt/benchopt"
Tracker = "https://github.com/benchopt/benchopt/issues"

[project.scripts]
benchopt = "benchopt.cli:benchopt"

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
  "pytest-timeout",
  "coverage",
]
doc = [
  "numpydoc",
  "sphinx",
  "sphinx-book-theme",
  "sphinx-design",
  "sphinx-click",
  "sphinx_gallery",
  "sphinx-prompt",
  "sphinx-copybutton",
  "pillow",
  "scikit-learn",
  "rich",
]
submitit = [
  "submitit",
  "rich",
]
dask = [
  "coiled",
  "distributed",
  "dask_jobqueue",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = { namespaces = false }

[tool.setuptools.package-data]
"benchopt.plotting" = [
  "html/static/main.css",
  "html/templates/index.mako.html",
  "html/templates/result.mako.html",
  "html/templates/benchmark.mako.html",
]

[tool.setuptools.dynamic]
version = {attr = "benchopt.__version__"}


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v -p benchopt.tests.fixtures"
testpaths = [
    "benchopt",
]

[tool.check-manifest]
ignore = [
  "*.yml",
  ".circleci/*",
  "continuous_integration/*",
  "Makefile",
  "roadmap.md",
  "benchopt/version.py"
]

[tool.coverage.run]
source = [
    "benchopt"
]
omit = [
  "*/tests/*",
  "setup.py",
]
parallel = true

[tool.coverage.report]
exclude_lines = [
    "if self.debug:",
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "except Exception",
    "\\.\\.\\."
]
ignore_errors = true
show_missing = true
