[metadata]
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: R
    Topic :: Scientific/Engineering
    Topic :: Utilities
    Topic :: Software Development :: Libraries
description = Benchmark toolkit for optimization
download_url = https://github.com/benchopt/benchopt.git
long_description = file: README.rst, LICENSE
long_description_content_type = text/x-rst
license = BSD (3-clause)
maintainer = Thomas Moreau
maintainer_email = thomas.moreau@inria.fr
name = benchopt
platforms = any

[options]
include_package_data = True
packages = find:
setup_requires =
    # Make sure we install numpy/cython
    # early for certain deps
    numpy
    cython
install_requires =
    numpy
    scipy
    pandas
    matplotlib
    click
    joblib
    pygithub
    mako
    psutil
    plotly>=4.12
    line-profiler
project_urls =
    Documentation = https://benchopt.github.io/
    Source = https://github.com/benchopt/benchOpt
    Tracker = https://github.com/benchopt/benchOpt/issues

[options.package_data]
benchopt.plotting =
    html/static/main.css
    html/templates/index.mako.html
    html/templates/result.mako.html
    html/templates/benchmark.mako.html

[options.extras_require]
test =
    pytest
    pytest-timeout
    pytest-cov
    coverage

doc =
    numpydoc
    sphinx-bootstrap-theme
    sphinx-click
    sphinx_gallery
    pillow
    scikit-learn
