[metadata]
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: R
    Topic :: Scientific/Engineering
    Topic :: Utilities
    Topic :: Software Development :: Libraries
description = Benchmark toolkit for optimization
download_url = https://github.com/benchopt/benchopt.git
long_description = file: README.rst, LICENSE
long_description_content_type = text/x-rst
license = BSD (3-clause)
maintainer = Thomas Moreau
maintainer_email = thomas.moreau@inria.fr
name = benchopt
platforms = any

[options]
include_package_data = True
packages = find:
install_requires =
    numpy
    scipy
    pandas
    matplotlib
    click>=8.0
    joblib
    pygithub
    mako
    psutil
    plotly>=4.12
    pyyaml
    line-profiler
    pyarrow
project_urls =
    Documentation = https://benchopt.github.io/
    Source = https://github.com/benchopt/benchopt
    Tracker = https://github.com/benchopt/benchopt/issues

[options.package_data]
benchopt.plotting =
    html/static/main.css
    html/templates/index.mako.html
    html/templates/result.mako.html
    html/templates/benchmark.mako.html

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-timeout
    coverage

doc =
    numpydoc
    sphinx==4.5.0
    sphinx-book-theme
    sphinx-design
    sphinx-click
    sphinx_gallery
    sphinx-prompt
    sphinx-copybutton
    sphinxcontrib-mermaid
    pillow
    scikit-learn

slurm =
    submitit
    rich
